[package]
name = "rltk"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
publish = false
build = "build.rs"

[dependencies]
glutin = "0.22.0-alpha1"
winit = "0.19"
takeable-option = "0.4"
image = "0.21"
cgmath = "0.16.1"
bresenham = "0.1.1"
rayon = "1.1.0"

[build-dependencies]
gl_generator = "0.11"
